--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-alpha.6",
     "rc-progress": "^2.1.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-circular-progressbar": "^0.1.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-transition-group": "^1.1.3",
+    "reactstrap": "^4.6.2"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
